add CNAME file for "battle-of-alesia.com"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "battle-of-alesia",
+	"name": "battle-of-alesia.com",
 	"version": "0.0.0-dev.1",
 	"description": "julius caesar's story of the siege of vercingetorix's men and the people of the gallic hill fort alesia",
 	"private": true,
